# ipfs-kvs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  setup.py  sitemap.xml
.github/: ci.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  test.yml
LICENSE/: index.html
classes_index/: index.html
classes_ipfs/: index.html
classes_store/: index.html
docs/: classes_index.md  classes_ipfs.md  classes_store.md  index.md
ipfskvs/: __init__.py  index.py  ipfs.py  store.py
notebooks/: ipfs.ipynb
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
src/: __init__.py
tests/integration/: test_dataframe.py  test_delete.py  test_integration.py  test_pandas.py  test_store.py
tests/unit/: test_delete.py  test_get_directory.py  test_index.py  test_ipfs.py  test_matches.py
